# eth-dca-bot

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  Cargo.toml  Cargo.toml.android  Cargo.toml.cross  Cargo.toml.original  Cargo.toml.simple  Cargo.toml.termux  Cross.toml  Dockerfile  Makefile  README.md  build-for-android.sh  complete-termux-fix.sh  cross-compile-fixed.sh  cross-compile-incremental.sh  cross-compile-optimized.sh  cross-compile-rustls.sh  cross-compile-simple.sh  cross-compile-strategic.sh  cross-compile.sh  debug-dependencies.sh  diagnostic-log.md  docker-compose.prod.yml  docker-compose.yml  download-android-binary.sh  features-idea.md  fix-cargo-deps.sh  fix-mongodb-termux.sh  fix-openssl-termux.sh  init-mongo.js  minimal-mongodb.sh  replace_purchase.sh  setup-termux.sh
.cargo/: config.toml
.github/workflows/: cross-compile.yml
binaries/android/: README.md
binaries/android/services/: install.sh  update.sh
binaries/android/services/eth-dca-bot/: run
binaries/android/services/eth-dca-bot/log/: run
binaries/android/services/mongod/: run
docs/: limit-sleeve-roadmap.md  limit-sleeve-smoke-test.md
src/: binance.rs  config.rs  date_utils.rs  dca.rs  dca_evolution.rs  dca_stats.rs  dca_stats_mongo.rs  demo.rs  demo_backup.rs  exchange.rs  kraken.rs  levels.rs  lib.rs  limit_sleeve.rs  main.rs  market_indicators.rs  notion_integration.rs  okx.rs
