[package]
name = "eth-dca-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = {version = "0.4.41",  features = ["serde"]}
chrono-tz = "0.10.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.37.2"
serde = "1.0.219"
sha2 = "0.10.9"
tokio-cron-scheduler = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "bigdecimal"] }
uuid = { version = "1.18.0", features = ["v4"] }

rust_decimal_macros = "1.37.1"
mongodb = "3.2.5"
futures = "0.3.31"
bson = { version = "2.15", features = ["chrono-0_4"] }
notion-client = "1.0.10"
serde_json = "1.0.143"
