[package]
name = "eth-dca-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies - these compile fast
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = "1.0.219"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }
serde_json = "1.0.143"
cron = "0.15.0"
futures = "0.3.31"
tokio-cron-scheduler = "0.14.0"

# HTTP client with rustls (no OpenSSL)
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }

# For Android, use SQLite instead of MongoDB initially
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Force vendored OpenSSL for any dependency that might need it
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# Simplified MongoDB and Notion for Android (with rustls)
bson = { version = "2.15", features = ["chrono-0_4"] }
mongodb = { version = "3.3.0", default-features = false, features = ["rustls-tls", "bson-2", "compat-3-3-0"] }
notion-client = { version = "1.0.10", default-features = false }

# Note: tokio-cron-scheduler might be heavy, consider implementing simple scheduling
